@@ -1153,24 +1153,24 @@ replace restart {
 	ld	sp,%1
 } if notUsed('a')
 
-//replace restart {
-//	call	%1
-//	ret
-//} by {
-//	jp	%1
-//	; peephole 114 replaced call at end of function by jump (tail call optimization).
-//}
+replace restart {
+	call	%1
+	ret
+} by {
+	jp	%1
+	; peephole 114 replaced call at end of function by jump (tail call optimization).
+}
 
 // Callee saves ix.
-//replace restart {
-//	call	%1
-//	pop	ix
-//	ret
-//} by {
-//	pop	ix
-//	jp	%1
-//	; peephole115 replaced call at end of function by jump moving call beyond pop ix (tail call optimization).
-//}
+replace restart {
+	call	%1
+	pop	ix
+	ret
+} by {
+	pop	ix
+	jp	%1
+	; peephole115 replaced call at end of function by jump moving call beyond pop ix (tail call optimization).
+}
 
 replace restart {
 	ld	%1,#%2
